GNOME Bugzilla – Bug 670368
GSD/color isn't properly setting the _ICC_PROFILE atom
Last modified: 2012-02-21 18:59:34 UTC
Created attachment 207949 [details] GNOME Settings Daemon debug log On a just cleanly installed desktop system (Ubuntu Precise (not yet released)) with GNOME Settings Daemon 3.3.5, my _ICC_PROFILE atom isn't properly being set. $ xprop -display :0.0 -len 14 -root _ICC_PROFILE _ICC_PROFILE: no such atom on any window. The problem should have been solved in the following commit: http://git.gnome.org/browse/gnome-settings-daemon/commit/?id=08e2b9880d7f9c3fd76417249abe50d6cfbf58c0 The moo.c program supplied to me by Richard Hughes outputs: $ ./moo [VGA1] connected: 0 laptop: 0 primary: 0 [DVI1] connected: 1 laptop: 0 primary: 0 I've attached the output of gsd --debug.
(In reply to comment #0) > The problem should have been solved in the following commit: > http://git.gnome.org/browse/gnome-settings-daemon/commit/?id=08e2b9880d7f9c3fd76417249abe50d6cfbf58c0 Right, the heuristic fails in your case: * primary * laptop * first device in list What we really want is: * primary * laptop * first *connected* device in list I've pushed this as: commit 0bd1e5d8ae4931cb997bbe28f647ae474c689099 Author: Richard Hughes <richard@hughsie.com> Date: Mon Feb 20 09:27:56 2012 +0000 color: Correctly set the _ICC_PROFILE when there is no primary device specified When there is no primary or laptop display, fall back to the first *connected* display, not just the first display returned from xrandr. Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=670368
Much obliged. I just got the new GSD 3.3.90 release in Ubuntu Precise, and retested the issue. Checking the "Try system display profile" in the GIMP, now clearly changes the color rendition. So _ICC_PROFILE must be set.