color: Correctly set the _ICC_PROFILE when there is no primary device specified

When there is no primary or laptop display, fall back to the first *connected*
display, not just the first display returned from xrandr.

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=670368